# gwocss

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  ChangeLog  Doxyfile.html_cfg  HISTORY.md  INSTALL  Makefile.am  NEWS  README  README.rst  autogen.sh  configure.ac  index.html
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html
docs/html/d0/da4/: utils_8f.html  utils_8f_a0372175a02e9a75442b6070a9636130c_icgraph.map  utils_8f_a0372175a02e9a75442b6070a9636130c_icgraph.md5  utils_8f_a042920ed1d556ec6a6572c76a004afae_icgraph.map  utils_8f_a042920ed1d556ec6a6572c76a004afae_icgraph.md5  utils_8f_a0ec8b5fbb2feb63aa9242877187eb7cc_icgraph.map  utils_8f_a0ec8b5fbb2feb63aa9242877187eb7cc_icgraph.md5  utils_8f_a2ea37adbef73c587b6708200cb19f03a_icgraph.map  utils_8f_a2ea37adbef73c587b6708200cb19f03a_icgraph.md5  utils_8f_a4f313e0a002cd074fefa8c3c6644de44_icgraph.map  utils_8f_a4f313e0a002cd074fefa8c3c6644de44_icgraph.md5  utils_8f_aa67cf7df9fac8b49ecb8fb020821d525_icgraph.map  utils_8f_aa67cf7df9fac8b49ecb8fb020821d525_icgraph.md5  utils_8f_ac7475efe535e2a13e0c32b30e80d52a6_icgraph.map  utils_8f_ac7475efe535e2a13e0c32b30e80d52a6_icgraph.md5  utils_8f_ad51409e488caa0b6621caa12ad29297c_icgraph.map  utils_8f_ad51409e488caa0b6621caa12ad29297c_icgraph.md5  utils_8f_ada49f994f851db3de12768d051cd93fb_icgraph.map  utils_8f_ada49f994f851db3de12768d051cd93fb_icgraph.md5  utils_8f_ae26fe353463c9a52b0d379e4d78fe899_icgraph.map  utils_8f_ae26fe353463c9a52b0d379e4d78fe899_icgraph.md5  utils_8f_ae2d94dded1c7d5cb50cb38a013c79353_icgraph.map  utils_8f_ae2d94dded1c7d5cb50cb38a013c79353_icgraph.md5  utils_8f_aea6bd637ff6e9292b15591b24874cb9d_cgraph.map  utils_8f_aea6bd637ff6e9292b15591b24874cb9d_cgraph.md5  utils_8f_aea6bd637ff6e9292b15591b24874cb9d_icgraph.map  utils_8f_aea6bd637ff6e9292b15591b24874cb9d_icgraph.md5  utils_8f_aefec7f68acfef601819ad86d7238d9ae_icgraph.map  utils_8f_aefec7f68acfef601819ad86d7238d9ae_icgraph.md5  utils_8f_source.html
docs/html/d0/dae/: winterp_8f.html  winterp_8f_a3e383f3e341b5bceeba6c03663cfa072_cgraph.map  winterp_8f_a3e383f3e341b5bceeba6c03663cfa072_cgraph.md5  winterp_8f_a3e383f3e341b5bceeba6c03663cfa072_icgraph.map  winterp_8f_a3e383f3e341b5bceeba6c03663cfa072_icgraph.md5  winterp_8f_ae38c8c525f918ef743c187dbd8c4c57d_cgraph.map  winterp_8f_ae38c8c525f918ef743c187dbd8c4c57d_cgraph.md5  winterp_8f_ae38c8c525f918ef743c187dbd8c4c57d_icgraph.map  winterp_8f_ae38c8c525f918ef743c187dbd8c4c57d_icgraph.md5  winterp_8f_source.html
docs/html/d2/d2b/: topo_8f.html  topo_8f_a254ca4606a5b6ea7918135631d6236a6_icgraph.map  topo_8f_a254ca4606a5b6ea7918135631d6236a6_icgraph.md5  topo_8f_source.html
docs/html/d2/d8f/: geosig_8f.html  geosig_8f_af1d97c27096042d23d2ebbd38344ef4d_cgraph.map  geosig_8f_af1d97c27096042d23d2ebbd38344ef4d_cgraph.md5  geosig_8f_af1d97c27096042d23d2ebbd38344ef4d_icgraph.map  geosig_8f_af1d97c27096042d23d2ebbd38344ef4d_icgraph.md5  geosig_8f_source.html
docs/html/d3/d5c/: FLOWER_8CMM.html  FLOWER_8CMM_source.html
docs/html/d4/d8f/: STALOC_8CMM.html  STALOC_8CMM_source.html
docs/html/d4/de5/: resig_8f.html  resig_8f_a31befcca77f3529ca75d0967a58b7e5a_cgraph.map  resig_8f_a31befcca77f3529ca75d0967a58b7e5a_cgraph.md5  resig_8f_a31befcca77f3529ca75d0967a58b7e5a_icgraph.map  resig_8f_a31befcca77f3529ca75d0967a58b7e5a_icgraph.md5  resig_8f_source.html
docs/html/d5/dd3/: input_8f.html  input_8f_ae21437da36291622efefe6930615c57d_icgraph.map  input_8f_ae21437da36291622efefe6930615c57d_icgraph.md5  input_8f_source.html
docs/html/d5/de9/: interp_8f.html  interp_8f_a1049f2c9a94baca31bcb0ea68f172dfb_cgraph.map  interp_8f_a1049f2c9a94baca31bcb0ea68f172dfb_cgraph.md5  interp_8f_a1049f2c9a94baca31bcb0ea68f172dfb_icgraph.map  interp_8f_a1049f2c9a94baca31bcb0ea68f172dfb_icgraph.md5  interp_8f_a8189136387abfbf3929561396b96a644_cgraph.map  interp_8f_a8189136387abfbf3929561396b96a644_cgraph.md5  interp_8f_a8189136387abfbf3929561396b96a644_icgraph.map  interp_8f_a8189136387abfbf3929561396b96a644_icgraph.md5  interp_8f_ac894fce71c26b37a9bb66ad713b89787_icgraph.map  interp_8f_ac894fce71c26b37a9bb66ad713b89787_icgraph.md5  interp_8f_adda9cde658e394c3eaedac3765789170_cgraph.map  interp_8f_adda9cde658e394c3eaedac3765789170_cgraph.md5  interp_8f_source.html
docs/html/d6/de7/: flowht_8f.html  flowht_8f_ad643b696e317136e66ddd9c79bef191c_cgraph.map  flowht_8f_ad643b696e317136e66ddd9c79bef191c_cgraph.md5  flowht_8f_ad643b696e317136e66ddd9c79bef191c_icgraph.map  flowht_8f_ad643b696e317136e66ddd9c79bef191c_icgraph.md5  flowht_8f_source.html
docs/html/d7/dc1/: TSONDS_8CMM.html  TSONDS_8CMM_source.html
docs/html/d7/df3/: ANCHOR_8CMM.html  ANCHOR_8CMM_source.html
docs/html/d8/d91/: strat_8f.html  strat_8f_a74100c5b0c9102bce415b7b476b44bda_cgraph.map  strat_8f_a74100c5b0c9102bce415b7b476b44bda_cgraph.md5  strat_8f_a74100c5b0c9102bce415b7b476b44bda_icgraph.map  strat_8f_a74100c5b0c9102bce415b7b476b44bda_icgraph.md5  strat_8f_source.html
docs/html/d9/d21/: wocss_8f.html  wocss_8f_source.html  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  files_e.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+2 more)
inc/: ANCHOR.CMM  FLOWER.CMM  LIMITS.CMM  NGRIDS.PAR  STALOC.CMM  TSONDS.CMM
packaging/: setup.txt
packaging/gentoo/: gwocss.confd  gwocss.init
scripts/: gwocss
slcin/: 10162215WXIN  SLCFILES
slcout/: LOCLTOPO  UF1KM-ALLZ.162215  VF1KM-ALLZ.162215
src/: Makefile.am  bal5.f  betpar.f  dopsig.f  flowht.f  geosig.f  input.f  interp.f  invwt.f  levwnd.f  output.f  resig.f  richardson.f  strat.f  topo.f  utils.f  vertvel.f  windest.f  winterp.f  wocss.f
(+66 files in other folders)
